update application.properties to increase Kafka producer batch size and TCP buffer sizes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ mp.messaging.outgoing.bid-stream.topic=bids
 kafka.producer.linger.ms=10
 # Automatic JSON serialization for the BidRequest object
 mp.messaging.outgoing.bid-stream.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+
+# Increase the batch size (standard is 16KB, let's try 64KB)
+kafka.producer.batch.size=65536
+
+# Increase standard TCP buffers for Docker networking
+kafka.producer.send.buffer.bytes=131072
+kafka.producer.receive.buffer.bytes=131072
