--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,110 +1,99 @@
-# This workflow builds and pushes the JVM and Native Docker images
-# to the GitHub Container Registry (ghcr.io)
+# This workflow builds and pushes Docker images for all services in the monorepo
+# It includes a conditional pre-build step for Java/Maven projects.
 
-name: Build and Push Docker Images
+name: Build and Push All Services
 
-# 1. TRIGGER: Run on every push to the 'main' branch
 on:
   push:
-#    branches: [ "main" ]
-    branches:
-      - '**'  # For testing, run on all branches
-
-permissions:
-  actions: read
-  statuses: read
-  id-token: write
-  contents: read
-  pull-requests: read
-  packages: write
+    branches: [ "*" ]
+    paths:
+      - 'services/**'
+      - '.github/workflows/build-all.yml'
+  pull_request:
+    branches: [ "main" ]
+    paths:
+      - 'services/**'
+      - '.github/workflows/build-all.yml'
 
 jobs:
-  build-jvm:
-    name: Build & Push JVM Image
-    runs-on: ubuntu-latest # Use a standard Linux runner
-
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v5
-
-      - name: Set up Java (JDK 21)
-        uses: actions/setup-java@v5
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Log in to GitHub Container Registry (ghcr.io)
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          # GITHUB_TOKEN is a temporary secret provided by Actions
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_PAT }}
-
-      - name: Build JVM Jar
-        # Just run the standard package build
-        run: ./mvnw package
-
-      - name: Build and push JVM Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./src/main/docker/Dockerfile.jvm # Specify the JVM Dockerfile
-          push: true # Push the image to the registry
-          tags: |
-            ghcr.io/${{ github.repository }}:jvm-latest
-            ghcr.io/${{ github.repository }}:jvm-${{ github.sha }}
-
-
-  build-native:
-    name: Build & Push Native Image
+  build-and-push:
+    name: Build & Push Service
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: read
+      packages: write
+
+    strategy:
+      matrix:
+        service:
+          # --- Service 1: Quarkus Receiver (Needs Java pre-build) ---
+          - name: quarkus-receiver
+            path: ./services/1-quarkus-receiver
+            dockerfile: src/main/docker/Dockerfile.native
+            # NEW: Define a pre-build command for Java
+            pre_build: "./mvnw package -Pnative -Dquarkus.native.container-build=true" 
+            
+          # --- Service 2: Go Receiver (No pre-build needed) ---
+          - name: go-receiver
+            path: ./services/2-go-receiver
+            dockerfile: Dockerfile
+            pre_build: "none" # Explicitly no pre-build
+            
+          # --- Service 3: Quarkus Sinker (Needs Java pre-build) ---
+          - name: quarkus-sinker
+            path: ./services/3-quarkus-sinker
+            dockerfile: src/main/docker/Dockerfile.native
+            # NEW: Define a pre-build command for Java
+            pre_build: "./mvnw package -Pnative -Dquarkus.native.container-build=true"
 
     steps:
-      - name: Check out code
-        uses: actions/checkout@v5
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-      - name: Set up Java (JDK 21)
-        uses: actions/setup-java@v5
+      # --- NEW: Setup Java (JDK 17) ---
+      # This is required for the Quarkus services' pre-build step
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
+          cache: 'maven'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Log in to GitHub Container Registry (ghcr.io)
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Native Executable (using container build)
-        # This is the long step (5-10 mins)
-        # It tells Maven to build, using the -Pnative profile,
-        # and to run that native build *inside* a Docker container.
-        run: ./mvnw package -Pnative -Dquarkus.native.container-build=true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Build and push Native Docker image
-        uses: docker/build-push-action@v6
+      # --- NEW: Run the Maven Pre-Build (if defined) ---
+      - name: Run Maven Pre-Build Step (if needed)
+        # This 'if' condition checks the matrix
+        if: matrix.service.pre_build != 'none'
+        run: |
+          echo "Running pre-build step: ${{ matrix.service.pre_build }}"
+          cd ${{ matrix.service.path }}
+          chmod +x ./mvnw
+          ${{ matrix.service.pre_build }}
+
+      - name: Generate Docker tags and labels
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          context: .
-          file: ./src/main/docker/Dockerfile.native # Specify the Native Dockerfile
-          push: true # Push the image to the registry
-          tags: |
-            ghcr.io/${{ github.repository }}:native-latest
-            ghcr.io/${{ github.repository }}:native-${{ github.sha }}
+          images: ghcr.io/${{ github.repository }}/${{ matrix.service.name }}
+
+      - name: Build and push Docker image
+        id: build-push
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ matrix.service.path }}
+          file: ${{ matrix.service.path }}/${{ matrix.service.dockerfile }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
