--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -5,7 +5,7 @@ name: Build and Push All Services
 
 on:
   push:
-    branches: [ "*" ]
+    branches:
     paths:
       - 'services/**'
       - '.github/workflows/build-all.yml'
