--- a/services/quarkus-sinker/pom.xml
+++ b/services/quarkus-sinker/pom.xml
@@ -57,6 +57,11 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-observation</artifactId>
         </dependency>
+        <!-- Health checks for Docker -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-health</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
