--- a/services/rust-receiver/Dockerfile
+++ b/services/rust-receiver/Dockerfile
@@ -14,8 +14,8 @@ RUN cargo build --release
 # --- Stage 2: Create the final, smaller image ---
 FROM debian:bullseye-slim
 
-# Install runtime dependencies for rdkafka
-RUN apt-get update && apt-get install -y librdkafka1 --no-install-recommends && rm -rf /var/lib/apt/lists/*
+# Install runtime dependencies for rdkafka and wget for health checks
+RUN apt-get update && apt-get install -y librdkafka1 wget --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
 # Copy the compiled binary from the builder stage
 COPY --from=builder /usr/src/app/target/release/rust-receiver /usr/local/bin/rust-receiver
