feat: Add Jaeger distributed tracing support

--- a/helm/quarkus-adtech-demo/templates/quarkus-receiver-native.yaml
+++ b/helm/quarkus-adtech-demo/templates/quarkus-receiver-native.yaml
@@ -56,6 +56,14 @@ spec:
               value: "kafka:9092"
             - name: QUARKUS_PROFILE
               value: "prod"
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: "http://jaeger:4317"
+            - name: OTEL_SERVICE_NAME
+              value: "quarkus-receiver-native"
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: "http://jaeger:4317"
+            - name: OTEL_SERVICE_NAME
+              value: "quarkus-receiver-native"
           resources:
             {{- toYaml .Values.quarkusReceiverNative.resources | nindent 12 }}
           livenessProbe:
