--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,28 @@
 services:
 
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.8.3
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    healthcheck:
-      test: [ "CMD", "echo", "ruok", "|", "nc", "localhost", "2181" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
+  # Kafka in KRaft mode (no ZooKeeper needed!)
   kafka:
-    image: confluentinc/cp-kafka:7.8.3
-    depends_on:
-      - zookeeper
+    image: apache/kafka:latest
     ports:
       - "9092:9092"
-      - "9093:9093"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: INTERNAL://0.0.0.0:29092,EXTERNAL://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:29092,EXTERNAL://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      # KRaft mode configuration
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,INTERNAL://kafka:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_HEAP_OPTS: -Xmx1024M -Xms1024M
-#      KAFKA_JMX_PORT: 9999
-#      KAFKA_JMX_HOSTNAME: kafka
-    #    entrypoint: [ "/bin/bash", "-c", "/etc/confluent/docker/run & /scripts/bootstrap-topics.sh" ]
-    entrypoint: [ "/bin/bash", "-c", "/etc/confluent/docker/run" ]
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      # Generate cluster ID automatically
+      CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
+      # Reduce memory footprint
+      KAFKA_HEAP_OPTS: -Xmx512M -Xms256M
+    entrypoint: [ "/bin/bash", "-c", "/opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties --override node.id=1 --override process.roles=broker,controller --override listeners=PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:29092 --override advertised.listeners=PLAINTEXT://localhost:9092,INTERNAL://kafka:29092 --override listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT --override controller.quorum.voters=1@kafka:9093 --override controller.listener.names=CONTROLLER --override inter.broker.listener.name=INTERNAL --override offsets.topic.replication.factor=1 --override transaction.state.log.replication.factor=1 --override transaction.state.log.min.isr=1 & (sleep 30 && /scripts/create-kafka-topics.sh &); wait" ]
     healthcheck:
       test: [ "CMD", "nc", "-z", "localhost", "9092" ]
       interval: 10s
@@ -39,6 +31,7 @@ services:
     volumes:
       - ./scripts:/scripts
       - ./data:/data
+      - kafka_data:/var/lib/kafka/data
 
   kafdrop:
     image: obsidiandynamics/kafdrop:4.1.0
@@ -203,3 +196,4 @@ services:
 volumes:
   grafana_data:
   postgresData:
+  kafka_data:
