--- a/helm/quarkus-adtech-demo/templates/kafka.yaml
+++ b/helm/quarkus-adtech-demo/templates/kafka.yaml
@@ -15,6 +15,10 @@ spec:
       port: {{ .Values.kafka.port }}
       targetPort: 9092
       protocol: TCP
+    - name: controller
+      port: 9093
+      targetPort: 9093
+      protocol: TCP
   selector:
     app: kafka
 ---
@@ -44,23 +48,38 @@ spec:
           ports:
             - containerPort: 9092
               name: broker
+            - containerPort: 9093
+              name: controller
           env:
-            - name: KAFKA_BROKER_ID
+            # KRaft mode configuration (no ZooKeeper!)
+            - name: KAFKA_NODE_ID
               value: "1"
-            - name: KAFKA_ZOOKEEPER_CONNECT
-              value: "zookeeper:2181"
+            - name: KAFKA_PROCESS_ROLES
+              value: "broker,controller"
+            - name: KAFKA_LISTENERS
+              value: "PLAINTEXT://:9092,CONTROLLER://:9093"
             - name: KAFKA_ADVERTISED_LISTENERS
               value: "PLAINTEXT://kafka:9092"
             - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
-              value: "PLAINTEXT:PLAINTEXT"
+              value: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+            - name: KAFKA_CONTROLLER_QUORUM_VOTERS
+              value: "1@kafka:9093"
+            - name: KAFKA_CONTROLLER_LISTENER_NAMES
+              value: "CONTROLLER"
             - name: KAFKA_INTER_BROKER_LISTENER_NAME
               value: "PLAINTEXT"
             - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
               value: "1"
-            - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
-              value: "true"
+            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
+              value: "1"
+            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
+              value: "1"
+            - name: CLUSTER_ID
+              value: "MkU3OEVBNTcwNTJENDM2Qk"
             - name: KAFKA_LOG_DIRS
               value: /var/lib/kafka/data
+            - name: KAFKA_HEAP_OPTS
+              value: "-Xmx512M -Xms256M"
           volumeMounts:
             - name: kafka-data
               mountPath: /var/lib/kafka
