--- a/services/rust-receiver/Cargo.toml
+++ b/services/rust-receiver/Cargo.toml
@@ -9,3 +9,5 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 rdkafka = "0.36.0"
 tokio = { version = "1", features = ["full"] }
+prometheus = "0.13"
+lazy_static = "1.4"
