--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,36 +2,41 @@ services:
 
   # Kafka in KRaft mode (no ZooKeeper needed!)
   kafka:
-    image: apache/kafka:latest
+    image: confluentinc/cp-kafka:7.8.3
     ports:
       - "9092:9092"
     environment:
       # KRaft mode configuration
       KAFKA_NODE_ID: 1
-      KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:29092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,INTERNAL://kafka:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
-      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_PROCESS_ROLES: 'broker,controller'
+      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka:9093'
+      KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
+      KAFKA_LISTENERS: 'PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:29092'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://localhost:9092,INTERNAL://kafka:29092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT,INTERNAL:PLAINTEXT'
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'INTERNAL'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      # Generate cluster ID automatically
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_LOG_DIRS: '/var/lib/kafka/data'
       CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
-      # Reduce memory footprint
       KAFKA_HEAP_OPTS: -Xmx512M -Xms256M
-    entrypoint: [ "/bin/bash", "-c", "/opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft/server.properties --override node.id=1 --override process.roles=broker,controller --override listeners=PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:29092 --override advertised.listeners=PLAINTEXT://localhost:9092,INTERNAL://kafka:29092 --override listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT --override controller.quorum.voters=1@kafka:9093 --override controller.listener.names=CONTROLLER --override inter.broker.listener.name=INTERNAL --override offsets.topic.replication.factor=1 --override transaction.state.log.replication.factor=1 --override transaction.state.log.min.isr=1 & (sleep 30 && /scripts/create-kafka-topics.sh &); wait" ]
     healthcheck:
-      test: [ "CMD", "nc", "-z", "localhost", "9092" ]
+      test: [ "CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092" ]
       interval: 10s
       timeout: 5s
       retries: 10
     volumes:
       - ./scripts:/scripts
-      - ./data:/data
       - kafka_data:/var/lib/kafka/data
+    command: >
+      bash -c "
+      /etc/confluent/docker/run &
+      sleep 30 && /scripts/create-kafka-topics.sh;
+      wait
+      "
+
 
   kafdrop:
     image: obsidiandynamics/kafdrop:4.1.0
