--- a/helm/quarkus-adtech-demo/values.yaml
+++ b/helm/quarkus-adtech-demo/values.yaml
@@ -14,7 +14,7 @@ applicationImagePullPolicy: Never
 # Kafka configuration (KRaft mode - no ZooKeeper needed!)
 kafka:
   enabled: true
-  image: apache/kafka:latest
+  image: confluentinc/cp-kafka:7.8.3
   replicas: 1
   port: 9092
   resources:
