fix: Update Kafka service notes and controller quorum voters for KRaft mode

--- a/helm/quarkus-adtech-demo/templates/kafka.yaml
+++ b/helm/quarkus-adtech-demo/templates/kafka.yaml
@@ -63,7 +63,7 @@ spec:
             - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
               value: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
             - name: KAFKA_CONTROLLER_QUORUM_VOTERS
-              value: "1@kafka:9093"
+              value: "1@kafka-0.kafka.{{ .Values.namespace }}.svc.cluster.local:9093"
             - name: KAFKA_CONTROLLER_LISTENER_NAMES
               value: "CONTROLLER"
             - name: KAFKA_INTER_BROKER_LISTENER_NAME
