--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,9 +75,9 @@ services:
   postgres:
     image: "pgvector/pgvector:pg17" # Use a pgvector-enabled image
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: ${POSTGRES_DB:-postgres}
+      POSTGRES_USER: ${POSTGRES_USER:-user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD must be set}
     ports:
       - "5432:5432"
     volumes:
@@ -144,7 +144,9 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - DB_HOST=postgres
       - DB_PORT=5432
-      - DB_NAME=postgres
+      - DB_NAME=${POSTGRES_DB:-postgres}
+      - DB_USER=${POSTGRES_USER:-user}
+      - DB_PASSWORD=${POSTGRES_PASSWORD:?POSTGRES_PASSWORD must be set}
       - JAVA_OPTS=-Xmx512m -Xms128m
     ports:
       - "8074:8080"
